--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -14,8 +14,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/actionBackSearch"
@@ -27,24 +26,25 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingRight="16dp"
+                android:paddingBottom="8dp"
                 android:paddingLeft="16dp"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp">
+                android:paddingRight="16dp"
+                android:paddingTop="8dp">
 
                 <EditText
+                    android:id="@+id/etSearchInput"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_border"
-                    android:textSize="18dp"
+                    android:hint="Search Your Cakes"
                     android:paddingLeft="10dp"
-                    android:hint="Search Your Cakes" />
+                    android:textSize="18dp" />
             </RelativeLayout>
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
