--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -37,6 +37,8 @@
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_border"
                     android:hint="Search Your Cakes"
+                    android:imeOptions="actionSearch"
+                    android:inputType="text"
                     android:paddingLeft="10dp"
                     android:textSize="18dp" />
             </RelativeLayout>
@@ -44,6 +46,7 @@
     </android.support.v7.widget.Toolbar>
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvSearch"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
