--- a/app/src/main/res/layout/item_result_search.xml
+++ b/app/src/main/res/layout/item_result_search.xml
@@ -22,7 +22,7 @@
             android:weightSum="10">
 
             <ImageView
-                android:id="@+id/ivCartPicture"
+                android:id="@+id/ivSearchPicture"
                 android:layout_width="match_parent"
                 android:layout_height="110dp"
                 android:layout_weight="6"
@@ -53,25 +53,6 @@
                     android:paddingRight="11dp"
                     android:text="Price"
                     android:layout_marginTop="5dp"
-                    android:textSize="16dp" />
-
-                <TextView
-                    android:id="@+id/tvQuantity"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_below="@+id/tvNameCart"
-                    android:layout_marginTop="5dp"
-                    android:paddingRight="11dp"
-                    android:text="Quantity"
-                    android:textSize="16dp" />
-
-                <TextView
-                    android:id="@+id/tvQuantitySearch"
-                    android:layout_width="50dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_below="@+id/tvNameCart"
                     android:textSize="16dp" />
             </LinearLayout>
 
