--- a/app/src/main/res/layout/cart_activity.xml
+++ b/app/src/main/res/layout/cart_activity.xml
@@ -97,7 +97,7 @@
             android:layout_weight="2"
             android:textSize="20dp"
             android:textColor="@color/pink"
-            android:text="0.00$"/>
+            android:text="0.00"/>
     </LinearLayout>
 
 </RelativeLayout>
