--- a/app/src/main/res/layout/detail_activity.xml
+++ b/app/src/main/res/layout/detail_activity.xml
@@ -75,7 +75,30 @@
                             android:textColor="#fff"
                             android:textSize="15dp" />
                     </LinearLayout>
+                    <RelativeLayout
+                        android:layout_width="40dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true">
 
+                        <ImageView
+                            android:id="@+id/ivCart"
+                            android:layout_width="22dp"
+                            android:layout_height="65dp"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginRight="16dp"
+                            android:src="@mipmap/ic_cart" />
+                        <TextView
+                            android:id="@+id/tvItemCart"
+                            android:layout_width="14dp"
+                            android:layout_height="12dp"
+                            android:background="@drawable/item_cart"
+                            android:gravity="center"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginRight="10dp"
+                            android:layout_marginTop="10dp"
+                            android:textColor="@color/pink"
+                            android:textSize="9dp"/>
+                    </RelativeLayout>
                 </RelativeLayout>
 
             </android.support.v7.widget.Toolbar>
@@ -83,17 +106,6 @@
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabCart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:clickable="true"
-        android:src="@mipmap/ic_cart"
-        app:backgroundTint="@color/pink"
-        app:layout_anchor="@id/appBar"
-        app:layout_anchorGravity="bottom|right|end" />
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/flDetail"
