--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -1,3 +1,6 @@
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -22,21 +25,33 @@
             android:layout_weight="8"
             android:paddingLeft="-25dp"
             android:scaleType="centerInside"
-            android:src="@mipmap/ic_customer" />
+            android:src="@mipmap/ic_customer"
+            android:tint="@color/grey" />
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text="@string/customerInfo"
-            android:textColor="@color/black"
-            android:textSize="25dp" />
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/customerInfo"
+                android:textSize="25dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/order"/>
+        </LinearLayout>
     </LinearLayout>
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        card_view:cardCornerRadius="5dp"
         card_view:cardElevation="2dp"
         card_view:cardUseCompatPadding="true">
 
@@ -60,8 +75,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Name"
-                    android:singleLine="true"
-                    android:textColor="@color/black" />
+                    android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -77,8 +91,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Address"
-                    android:singleLine="true"
-                    android:textColor="@color/black" />
+                    android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -95,8 +108,7 @@
                     android:layout_height="wrap_content"
                     android:hint="Phone Number"
                     android:inputType="number"
-                    android:singleLine="true"
-                    android:textColor="@color/black" />
+                    android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -113,8 +125,7 @@
                     android:layout_height="wrap_content"
                     android:hint="Email"
                     android:inputType="textEmailAddress"
-                    android:singleLine="true"
-                    android:textColor="@color/black" />
+                    android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -130,25 +141,39 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="7"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="5dp"
                     android:text="Delivery Date: "
-                    android:textColor="@color/black"
                     android:textSize="18dp" />
 
-                <EditText
-                    android:id="@+id/etOrderDeliveryDate"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="5"
-                    android:editable="false"
-                    android:gravity="center"
-                    android:hint="N/A"
-                    android:paddingRight="10dp"
-                    android:textColor="@color/black"
+                    android:background="@drawable/custom_border"
+                    android:orientation="horizontal">
 
-                    />
+                    <ImageView
+                        android:id="@+id/ivDate"
+                        android:layout_width="35dp"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerInside"
+                        android:src="@mipmap/ic_event"
+                        android:tint="@color/grey"/>
+                    <TextView
+                        android:id="@+id/tvOrderDeliveryDate"
+                        android:layout_width="match_parent"
+                        android:layout_height="45dp"
+                        android:background="@drawable/custom_border"
+                        android:editable="false"
+                        android:gravity="center"
+                        android:paddingRight="10dp"
+                        android:textColor="@color/gray"
+
+                        />
+                </LinearLayout>
 
             </LinearLayout>
-
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -164,7 +189,6 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="7"
                     android:text="Total: "
-                    android:textColor="@color/black"
                     android:textSize="18dp" />
 
                 <EditText
@@ -174,8 +198,8 @@
                     android:layout_weight="5"
                     android:editable="false"
                     android:gravity="center"
-                    android:paddingRight="10dp"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/gray"
+                    android:paddingRight="10dp" />
 
             </LinearLayout>
 
@@ -194,8 +218,10 @@
             android:layout_height="60dp"
             android:background="@color/pink"
             android:text="Submit"
+            android:textAllCaps="false"
             android:textColor="@color/white" />
 
     </LinearLayout>
 
 </LinearLayout>
+</ScrollView>
