--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -43,13 +43,30 @@
                 android:textSize="15dp" />
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/ivCart"
-            android:layout_width="22dp"
-            android:layout_height="65dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="16dp"
-            android:src="@mipmap/ic_cart" />
+        <RelativeLayout
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true">
+
+            <ImageView
+                android:id="@+id/ivCart"
+                android:layout_width="22dp"
+                android:layout_height="65dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="16dp"
+                android:src="@mipmap/ic_cart" />
+            <TextView
+                android:id="@+id/tvItemCart"
+                android:layout_width="14dp"
+                android:layout_height="12dp"
+                android:background="@drawable/item_cart"
+                android:gravity="center"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/pink"
+                android:textSize="9dp"/>
+        </RelativeLayout>
 
 
         <ImageView
