--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -5,12 +5,12 @@
     </style>
     <style name="EditText" parent="TextAppearance.AppCompat">
         //hint color And Label Color in False State
-        <item name="android:textColorHint">@color/black</item>
+        <item name="android:textColorHint">@color/gray</item>
         <item name="android:textSize">18dp</item>
         //Label color in True State And Bar Color False And True State
-        <item name="colorAccent">@color/black</item>
-        <item name="colorControlNormal">@color/black</item>
-        <item name="colorControlActivated">@color/black</item>
+        <item name="colorAccent">@color/gray</item>
+        <item name="colorControlNormal">@color/gray</item>
+        <item name="colorControlActivated">@color/gray</item>
 
     </style>
 
