--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -67,11 +67,10 @@
 
 
                 <android.support.design.widget.TextInputLayout
-                    android:id="@+id/textName"
+                    android:id="@+id/textContactName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    app:theme="@style/EditText">
+                    android:layout_weight="1">
 
                     <EditText
                         android:id="@+id/etContactName"
@@ -86,8 +85,7 @@
                     android:id="@+id/textContactEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    app:theme="@style/EditText">
+                    android:layout_weight="1">
 
                     <EditText
                         android:id="@+id/etContactEmail"
@@ -103,8 +101,7 @@
                     android:id="@+id/textContactNum"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    app:theme="@style/EditText">
+                    android:layout_weight="1">
 
                     <EditText
                         android:id="@+id/etContactPhone"
@@ -120,8 +117,7 @@
                     android:id="@+id/textSubjectEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    app:theme="@style/EditText">
+                    android:layout_weight="1">
 
                     <EditText
                         android:id="@+id/etSubjectEmail"
