--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -67,8 +67,7 @@
                 android:id="@+id/textCustomName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                app:theme="@style/EditText">
+                android:layout_weight="1">
 
                 <EditText
                     android:id="@+id/etOrderName"
@@ -83,8 +82,7 @@
                 android:id="@+id/textAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                app:theme="@style/EditText">
+                android:layout_weight="1">
 
                 <EditText
                     android:id="@+id/etOrderAddress"
@@ -96,11 +94,10 @@
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/textContactNum"
+                android:id="@+id/textOrderNum"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                app:theme="@style/EditText">
+                android:layout_weight="1">
 
                 <EditText
                     android:id="@+id/etOrderPhone"
@@ -113,11 +110,10 @@
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/textContactEmail"
+                android:id="@+id/textOrderEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                app:theme="@style/EditText">
+                android:layout_weight="1">
 
                 <EditText
                     android:id="@+id/etOrderEmail"
