--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="yellow">#e98b1f</color>
     <color name="blue_light">#00b7c3</color>
     <color name="brown_light">#fab76b</color>
-    <color name="brown">#eeae65</color>
+    <color name="brown">#795548</color>
     <color name="brown_2">#c7b29a</color>
     <color name="brown_3">#9b9696</color>
     <color name="gray">#666666</color>
